[gd_scene load_steps=3 format=3 uid="uid://cq0eo3pk8nqoc"]

[ext_resource type="Script" path="res://scripts/WriteThing.gd" id="1_uf1ao"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_j11ek"]
mix_rate = 32000.0

[node name="WriteThing" type="Node2D"]
script = ExtResource("1_uf1ao")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-174, 16)
points = PackedVector2Array(176, 98)
width = 3.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2

[node name="AnimationProgress" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 152)
width = 8.0
default_color = Color(1, 0.258824, 0.258824, 0.54902)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(246, 140)

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_j11ek")
volume_db = -10.0
max_polyphony = 5

[node name="A" type="Button" parent="."]
offset_left = -36.0
offset_top = -1.0
offset_right = -18.0
offset_bottom = 30.0
text = "a"

[node name="B" type="Button" parent="."]
offset_left = -38.0
offset_top = 37.0
offset_right = -20.0
offset_bottom = 68.0
text = "b"

[node name="C" type="Button" parent="."]
offset_left = -43.0
offset_top = 79.0
offset_right = -26.0
offset_bottom = 110.0
text = "c"

[node name="saw" type="Button" parent="."]
offset_left = -57.0
offset_top = 132.0
offset_right = -18.0
offset_bottom = 163.0
text = "saw"

[connection signal="pressed" from="A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="saw" to="." method="_on_saw_pressed"]
